--- a/frontend/src/components/common/StatCard/StatCard.module.scss
+++ b/frontend/src/components/common/StatCard/StatCard.module.scss
@@ -27,6 +27,11 @@
       font-weight: 700;
       font-size: 1.5rem;
       letter-spacing: 0.03em;
+
+      // This prevents overflow
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
